@@ -27,7 +27,8 @@
  *	Sizes:
  */
 const int c_basetilesize = 8;		// A tile (shape) is 8x8 pixels.
-const int c_tilesize = c_basetilesize;	// A tile (shape) is 8x8 pixels.
+const int c_tilesize = 8;	// A tile (shape) is 8x8 pixels.
+const int c_num_tile_bytes = c_tilesize * c_tilesize;	// Total pixels per tile.
 const int c_screen_tile_size = 320/c_basetilesize;	// Number of tiles in a 'screen'.
 const int c_tiles_per_chunk = 16;	// A chunk is 16x16 tiles.
 const int c_chunksize = 16 * 8;		// A chunk has 16 8x8 shapes.
